# wasi-auth-middleware

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  justfile  progress.md
.github/workflows/: ci.yml
docs/: GUIDES.md
examples/leptos-auth-demo/: Cargo.toml
examples/leptos-auth-demo/src/: lib.rs  main.rs
leptos-wasi-auth/: Cargo.toml
leptos-wasi-auth/src/: lib.rs
scripts/: bump-version.rs
tests/: verify_mock_auth.py
tests/e2e-runner/: Cargo.toml  test_syntax.sh  test_wac.py
tests/e2e-runner/src/: app.rs  main.rs
tests/mock-auth-server/: Cargo.toml
tests/mock-auth-server/src/: app.rs  main.rs
wasi-auth-core/: Cargo.toml
wasi-auth-core/examples/: magic_link.rs  oauth.rs  otp.rs  storage_backends.rs  totp.rs
wasi-auth-core/src/: jwt.rs  lib.rs  magic_link.rs  oauth.rs  otp.rs  totp.rs
wasi-auth-core/tests/: challenge_tests.rs  stress_tests.rs
wasi-auth-interceptor/: Cargo.toml
wasi-auth-interceptor/src/: config.rs  lib.rs
wasi-auth-interceptor/wit/: wasi-http.wit  world.wit
wasi-auth-providers/: Cargo.toml
wasi-auth-providers/src/: lib.rs
wasi-auth-traits/: Cargo.toml
wasi-auth-traits/src/: http_email.rs  in_memory.rs  lib.rs  rate_limiter.rs  spin_kv.rs  sqlite.rs  stdout_email.rs
