[workspace]
resolver = "2"
members = [
    "wasi-auth-traits",
    "wasi-auth-core",
    "leptos-wasi-auth",
    "wasi-auth-interceptor",
    "wasi-auth-providers",
    "examples/leptos-auth-demo",
    "tests/mock-auth-server",
    "tests/e2e-runner",
]


[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = { version = "9.3", default-features = false, features = ["use_pem"] }
tokio = { version = "1.38" }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rsa = { version = "0.9", default-features = false, features = ["pem", "std", "sha2"] }
sha2 = { version = "0.10", features = ["oid"] }
sha1 = "0.10.6"
hmac = "0.12.1"
urlencoding = "2.1"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

