[package]
name = "leptos-wasi-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
description = "Leptos integration and cookie helpers for the WASI Authentication Middleware."
repository = "https://github.com/codeitlikemiley/wasi-auth-middleware"
documentation = "https://docs.rs/leptos-wasi-auth"
keywords = ["wasi", "auth", "middleware", "jwt", "leptos"]
categories = ["authentication", "wasm", "web-programming"]
readme = "../README.md"
authors = ["Enzo Nocera", "Uriah Galang"]

[dependencies]
wasi-auth-core = { version = "0.1.0", path = "../wasi-auth-core" }
serde.workspace = true
serde_json.workspace = true
leptos = { version = "0.8.9", default-features = false, optional = true }
http = "1.1"

[features]
default = ["ssr"]
ssr = ["dep:leptos", "leptos/ssr"]
hydrate = ["dep:leptos", "leptos/hydrate"]
csr = ["dep:leptos", "leptos/csr"]
"unsafe-dev-fallback" = []
leptos = ["dep:leptos"]

[dev-dependencies]
rsa = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
