[package]
name = "wasi-auth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasi-auth-traits = { path = "../wasi-auth-traits" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
chrono.workspace = true
base64.workspace = true
rsa.workspace = true
sha2.workspace = true
urlencoding.workspace = true



