[package]
name = "wasi-auth-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
description = "Core cryptographic, JWT token verification, and OAuth2 utilities for WASI."
repository = "https://github.com/codeitlikemiley/wasi-auth-middleware"
documentation = "https://docs.rs/wasi-auth-core"
keywords = ["wasi", "auth", "middleware", "jwt", "oauth"]
categories = ["authentication", "wasm", "web-programming"]
readme = "../README.md"
authors = ["Uriah Galang"]

[dependencies]
wasi-auth-traits = { version = "0.1.0", path = "../wasi-auth-traits" }
tracing = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
chrono.workspace = true
base64.workspace = true
rsa.workspace = true
sha2.workspace = true
sha1.workspace = true
hmac.workspace = true
urlencoding.workspace = true
[dev-dependencies]
wasi-auth-traits = { path = "../wasi-auth-traits", features = ["spin", "sqlite", "http-email"] }
wasi-auth-providers = { path = "../wasi-auth-providers", features = ["all"] }
