[package]
name = "wasi-auth-interceptor"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
description = "WASI incoming-handler interceptor proxy for authentication header injection."
repository = "https://github.com/codeitlikemiley/wasi-auth-middleware"
documentation = "https://docs.rs/wasi-auth-interceptor"
keywords = ["wasi", "auth", "middleware", "jwt", "interceptor"]
categories = ["authentication", "wasm", "web-programming"]
readme = "../README.md"
authors = ["Uriah Galang"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi-auth-core = { version = "0.1.0", path = "../wasi-auth-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wit-bindgen = "0.33.0"
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
toml = { version = "0.8", optional = true }

[features]
default = ["config-file"]
config-file = ["dep:toml"]




