[package]
name = "wasi-auth-traits"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
description = "Core abstractions and storage traits for the WASI Authentication Middleware."
repository = "https://github.com/codeitlikemiley/wasi-auth-middleware"
documentation = "https://docs.rs/wasi-auth-traits"
keywords = ["wasi", "auth", "middleware", "jwt", "oauth"]
categories = ["authentication", "wasm", "web-programming"]
readme = "../README.md"
authors = ["Enzo Nocera", "Uriah Galang"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
spin-sdk = { version = "3.0", optional = true }
http = { version = "1.0", optional = true }
bytes = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "wasi")))'.dependencies]
ureq = { version = "2.9", features = ["json"], optional = true }

[features]
default = ["hash-otp"]
spin = ["spin-sdk"]
sqlite = ["spin-sdk"]
http-email = ["spin-sdk", "http", "bytes", "ureq", "futures"]
hash-otp = ["dep:argon2", "dep:rand_core"]

