[package]
name = "e2e-runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dependencies]
anyhow = "1.0"
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
base64.workspace = true
rsa.workspace = true
rand.workspace = true
wasi-auth-core = { path = "../../wasi-auth-core" }
wasi-auth-traits = { path = "../../wasi-auth-traits" }
