[package]
name = "mock-auth-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken.workspace = true



